# leptos-devtools

./: .gitignore  Cargo.toml  README.md
devtools/: Cargo.toml
devtools/src/: component.rs  devtools.rs  extension.rs  lib.rs  runtime.rs
example/: Cargo.toml
example/src/: main.rs
examples/router/: Cargo.toml  README.md
examples/router/src/: lib.rs  main.rs
extension/: .prettierrc  manifest.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/assets/devtools-web/: index.html  index.js
extension/background/: background.ts
extension/content/: content.ts  inject.ts
extension/devtools/: devtools.html  devtools.ts
extension/popup/: popup-disabled.html  popup-enabled.html  popup.css  popup.html  popup.ts
extension/types/: message.ts
extension/utils/: bridge.ts  constant.ts  icon.ts  message.ts
extension_api/: Cargo.toml
extension_api/src/: component.rs  event.rs  lib.rs  message.rs
extension_devtools/: Cargo.toml  Trunk.toml  index.css  index.html
extension_devtools/src/: main.rs  message.rs
extension_devtools/src/component/: component_node.rs  mod.rs  tree.rs
extension_devtools/src/components/: aside.rs  aside_component.rs  aside_props.rs  component_node.rs  crumb.rs  mod.rs
extension_devtools/src/utils/: component.rs  mod.rs  node.rs
