[package]
name = "leptos_devtools"
version = { workspace = true }
edition = "2021"
authors = ["luoxiaozero"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-subscriber-wasm = "0.1.0"
regex = "1.9.1"
leptos_devtools_extension_api = { workspace = true }
