[package]
name = "leptos_devtools"
version = { workspace = true }
edition = "2021"
authors = ["luoxiaozero"]
description = "Browser DevTools extension for debugging Leptos applications."
repository = "https://github.com/luoxiaozero/leptos-devtools"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "smallvec",
    "fmt",
    "std",
] }
leptos_devtools_extension_api = { workspace = true }
