[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", features = [
    "nightly",
    "csr",
    "tracing",
] }
leptos_devtools = { path = "../devtools" }
