[package]
name = "leptos_devtools_extension_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.181", features = ["derive"] }
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.4.5"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "Window"
]