[package]
name = "leptos_devtools_extension_api"
version = { workspace = true }
edition = "2021"
authors = ["luoxiaozero"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.181", features = ["derive"] }
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.4.5"

[dependencies.web-sys]
version = "0.3.64"
features = ["console", "Window", "MessageEvent"]

[dev-dependencies]
serde_json = "1.0.104"
