[package]
publish = false
name = "extension_devtools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_devtools_extension_api = { path = "../extension_api" }
chrome-wasm-bindgen = "0.0.1"
leptos = { version = "0.5.0", features = ["csr"] }
wasm-bindgen = "0.2.87"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[features]
development = []
