[package]
name = "router"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
console_log = "1"
log = "0.4"
leptos = { version = "0.5.0", features = ["csr", "nightly", "tracing"] }
leptos_router = { version = "0.5.0", features = ["csr", "nightly"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1.7"
leptos_meta = { version = "0.5.0", features = ["csr", "nightly"] }
leptos_devtools = { path = "../../devtools" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
